// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns pixel values 1`] = `
Object {
  "height": "200px",
}
`;

exports[`Returns responsive values 1`] = `
Object {
  "@media screen and (min-width: 40em)": Object {
    "height": "100px",
  },
  "height": "50px",
}
`;

exports[`Returns string values 1`] = `
Object {
  "height": "100%",
}
`;
